--- a/tiovlad/makefile
+++ b/tiovlad/makefile
@@ -1,9 +1,14 @@
-Vladimir: main.o graph.o 
-				  gcc main.o graph.o -o Vladimir
+Vladimir: main.o grafo.o vladimir.o
+				  gcc main.o grafo.o vladimir.o -o Vladimir
 
 main.o: main.c
 	gcc -c main.c
 
-graph.o : graph.c graph.h
-	gcc -c graph.c
+vladimir.o : vladimir.c vladimir.h
+	gcc -c vladimir.c
+
+grafo.o : grafo.c grafo.h
+	gcc -c grafo.c
+
+
 
